tests/neg/t1625b.scala
object T5 {
  case class Abc(x: String*, c: String*) // error: identifier expected but `,` found
}
